--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Dicoding Submission BFAA</string>
+    <string name="bottom_nav_menu_home">Home</string>
+    <string name="bottom_nav_menu_explore">Explore</string>
+    <string name="bottom_nav_menu_profile">Profile</string>
 </resources>
