Creating User Fav UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_bar_title_explore">Explore</string>
     <string name="action_bar_title_profile">Profile</string>
     <string name="action_bar_title_user_detail">User Detail</string>
+    <string name="action_bar_title_user_fav">User Favourites</string>
 
     <!-- for headline in home ui -->
     <string name="headline_1_text">Find your developers to make the world more intelligent!</string>
