--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="action_bar_title_profile">Profile</string>
     <string name="action_bar_title_user_detail">User Detail</string>
     <string name="action_bar_title_user_fav">User Favourites</string>
-    <string name="action_bar_title_alarm_setting">Alarm Setting</string>
+    <string name="action_bar_title_settings">Settings</string>
 
     <!-- for headline in home ui -->
     <string name="headline_1_text">Find your developers to make the world more intelligent!</string>
@@ -62,6 +62,16 @@
     <string name="explore_content_desc_illustration_icon">Illustration Explore the world</string>
     <string name="explore_headline">Explore The World and Find Your Developers</string>
 
+    <string name="settings_change_language_label">Change language</string>
+    <string name="settings_change_language_default">English</string>
+    <string name="settings_set_reminder_label">Set reminder daily</string>
+    <string name="settings_time_reminder_label">Time</string>
+    <string name="settings_time_reminder">09:00</string>
+    <string name="settings_user_dummy">Rully</string>
+    <string name="settings_reminder_message">Hello, %s. Have you found your developers today?</string>
+    <string name="settings_reminder_setup_success_message">Reminder successfully set up</string>
+    <string name="settings_reminder_cancaled_success_message">Reminder successfully canceled</string>
+
     <!-- for feedback message -->
     <string name="error_message_label">Error</string>
     <string name="error_message">Sorry, something went wrong :(</string>
@@ -74,6 +84,6 @@
     <string name="content_description_logo">Logo App</string>
 
     <string name="toolbar_menu_item_change_language_label">Change Language</string>
-    <string name="toolbar_menu_item_alarm_label">Alarm Setting</string>
+    <string name="toolbar_menu_item_settings_label">Settings</string>
     <string name="toolbar_menu_item_user_fav_label">User Favourites</string>
 </resources>
