Updating User Detail UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,8 @@
     <string name="user_detail_content_desc_blog_url_icon">Blog Url Icon</string>
     <string name="user_detail_content_desc_follows_icon">Follows Icon</string>
     <string name="user_detail_content_desc_repository_icon">Repository Icon</string>
+    <string name="user_detail_added_to_fav_message">Added to Fav</string>
+    <string name="user_detail_removed_from_fav_message">Removed from Fav</string>
 
     <string name="profile_following_label">Following</string>
     <string name="profile_following_count">3.3k</string>
@@ -73,6 +75,7 @@
     <string name="settings_reminder_cancaled_success_message">Reminder successfully canceled</string>
 
     <string name="user_fav_no_user_favs_message">You still have no user favs. Go ahead and find them</string>
+    <string name="user_fav_empty_illustration_content_desc">Empty Illustration</string>
 
     <!-- for feedback message -->
     <string name="error_message_label">Error</string>
@@ -88,5 +91,4 @@
     <string name="toolbar_menu_item_change_language_label">Change Language</string>
     <string name="toolbar_menu_item_settings_label">Settings</string>
     <string name="toolbar_menu_item_user_fav_label">User Favourites</string>
-    <string name="user_fav_empty_illustration_content_desc">Empty Illustration</string>
 </resources>
