--- a/githubconsumerapp/src/main/res/values/strings.xml
+++ b/githubconsumerapp/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Github Consumer App</string>
+    <string name="item_user_username">User Icon</string>
 </resources>
