--- a/githubconsumerapp/src/main/res/values/strings.xml
+++ b/githubconsumerapp/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Github Consumer App</string>
+
     <string name="item_user_username">User Icon</string>
+
+    <string name="user_fav_no_user_favs_message">You still have no user favs. Go ahead and find them</string>
+    <string name="user_fav_empty_illustration_content_desc">User Fav Empty Illustration Icon</string>
 </resources>
