--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -11,7 +11,7 @@
     <string name="action_bar_title_settings">Pengaturan</string>
 
     <!-- for headline in home ui -->
-    <string name="headline_1_text">Temukan pengembangmu untuk membuat dunia lebih cerdas!F</string>
+    <string name="headline_1_text">Temukan pengembangmu untuk membuat dunia lebih cerdas!</string>
     <string name="headline_2_text">23.4 juta lebih pengembangan tersedia di seluruh dunia</string>
     <string name="home_user_list_label">Orang yang mungkin kamu kenal</string>
 
