Creating preferences.xml file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,9 @@
     <string name="toolbar_menu_item_settings_label">Settings</string>
     <string name="toolbar_menu_item_user_fav_label">User Favourites</string>
     <string name="splash_screen_logo_image_content_desc">Splash Screen Logo Image</string>
+    <string name="key_language">language</string>
+    <string name="language">Language</string>
+    <string name="language_summary">English</string>
+    <string name="key_reminder">reminder</string>
+    <string name="reminder">Enable reminder daily</string>
 </resources>
